# chatbotRAG_ENT

./: .gitignore  .replit  flask_routes.py  ingest_data.py  main.py  pyproject.toml  replit.md  requirements.txt  routes.py  vercel.json
api/: index.py
attached_assets/: Pasted-Absolument-Voici-l-ensemble-des-fichiers-et-des-configurations-n-cessaires-pour-d-ployer-un-chatbo-1747439084559.txt
data/: knowledge_base.txt
dto/: query_dto.py
src/: config.py  openai_handler.py  pinecone_manager.py  text_utils.py
static/: styles.css
templates/: base.html  index.html
